[gd_scene load_steps=12 format=3 uid="uid://cjvxs6euc6xbm"]

[ext_resource type="Script" path="res://addons/block_code/ui/blocks/utilities/parameter_input/parameter_input.gd" id="1_rgmxn"]
[ext_resource type="PackedScene" uid="uid://c7puyxpqcq6xo" path="res://addons/block_code/ui/blocks/utilities/drag_drop_area/drag_drop_area.tscn" id="2_05gck"]
[ext_resource type="PackedScene" uid="uid://b1oge52xhjqnu" path="res://addons/block_code/ui/blocks/utilities/snap_point/snap_point.tscn" id="2_6esp3"]
[ext_resource type="Script" path="res://addons/block_code/ui/blocks/utilities/background/background.gd" id="2_68spp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_afyv2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3r4mt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6oowp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5hq7f"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7m75r"]
bg_color = Color(1, 1, 1, 0.501961)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e7f0k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fjquj"]

[node name="ParameterInput" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1052.0
offset_bottom = -617.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_rgmxn")

[node name="Background" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_68spp")
block_type = 3

[node name="InputSwitcher" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Parameter"
mouse_filter = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="TextInput" type="MarginContainer" parent="InputSwitcher"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="LineEdit" type="LineEdit" parent="InputSwitcher/TextInput"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_placeholder_color = Color(0.76662, 0.76662, 0.76662, 1)
theme_override_colors/font_uneditable_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_color = Color(0.118581, 0.118581, 0.118581, 1)
theme_override_constants/minimum_character_width = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_afyv2")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_3r4mt")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6oowp")
placeholder_text = "Parameter"
expand_to_text_length = true

[node name="DragDropArea" parent="InputSwitcher/TextInput/LineEdit" instance=ExtResource("2_05gck")]
layout_mode = 1
drag_outside = true

[node name="ColorInput" type="ColorPickerButton" parent="InputSwitcher"]
unique_name_in_owner = true
visible = false
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_5hq7f")

[node name="DragDropArea" parent="InputSwitcher/ColorInput" instance=ExtResource("2_05gck")]
layout_mode = 1
drag_outside = true

[node name="OptionInput" type="OptionButton" parent="InputSwitcher"]
unique_name_in_owner = true
auto_translate_mode = 2
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
tooltip_text = "Parameter"
theme_override_colors/font_hover_pressed_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_styles/focus = SubResource("StyleBoxFlat_7m75r")
theme_override_styles/hover = SubResource("StyleBoxFlat_7m75r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7m75r")
theme_override_styles/normal = SubResource("StyleBoxFlat_7m75r")
action_mode = 1
fit_to_longest_item = false

[node name="DragDropArea" parent="InputSwitcher/OptionInput" instance=ExtResource("2_05gck")]
layout_mode = 1
drag_outside = true

[node name="Vector2Input" type="MarginContainer" parent="InputSwitcher"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="InputSwitcher/Vector2Input"]
layout_mode = 2

[node name="Control" type="Control" parent="InputSwitcher/Vector2Input/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="XLineEdit" type="LineEdit" parent="InputSwitcher/Vector2Input/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_placeholder_color = Color(0.76662, 0.76662, 0.76662, 1)
theme_override_colors/font_uneditable_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_color = Color(0.118581, 0.118581, 0.118581, 1)
theme_override_constants/minimum_character_width = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_afyv2")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_3r4mt")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6oowp")
placeholder_text = "x"
alignment = 1
expand_to_text_length = true

[node name="DragDropArea" parent="InputSwitcher/Vector2Input/HBoxContainer/XLineEdit" instance=ExtResource("2_05gck")]
layout_mode = 1
drag_outside = true

[node name="Control3" type="Control" parent="InputSwitcher/Vector2Input/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="MarginContainer" parent="InputSwitcher/Vector2Input/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="InputSwitcher/Vector2Input/HBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.804743, 0.804743, 0.804743, 1)

[node name="DragDropArea" parent="InputSwitcher/Vector2Input/HBoxContainer/CenterContainer/ColorRect" instance=ExtResource("2_05gck")]
layout_mode = 1
drag_outside = true

[node name="Control4" type="Control" parent="InputSwitcher/Vector2Input/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="YLineEdit" type="LineEdit" parent="InputSwitcher/Vector2Input/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 2
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_placeholder_color = Color(0.76662, 0.76662, 0.76662, 1)
theme_override_colors/font_uneditable_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_color = Color(0.118581, 0.118581, 0.118581, 1)
theme_override_constants/minimum_character_width = 0
theme_override_styles/focus = SubResource("StyleBoxEmpty_afyv2")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_3r4mt")
theme_override_styles/normal = SubResource("StyleBoxEmpty_6oowp")
placeholder_text = "y"
alignment = 1
expand_to_text_length = true

[node name="DragDropArea" parent="InputSwitcher/Vector2Input/HBoxContainer/YLineEdit" instance=ExtResource("2_05gck")]
layout_mode = 1
drag_outside = true

[node name="Control2" type="Control" parent="InputSwitcher/Vector2Input/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BoolInput" type="MarginContainer" parent="InputSwitcher"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8

[node name="BoolInputOption" type="OptionButton" parent="InputSwitcher/BoolInput"]
unique_name_in_owner = true
auto_translate_mode = 2
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
theme_override_colors/font_hover_pressed_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_hover_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_pressed_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_focus_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_colors/font_color = Color(0.117647, 0.117647, 0.117647, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_e7f0k")
theme_override_styles/hover = SubResource("StyleBoxEmpty_6oowp")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6oowp")
theme_override_styles/normal = SubResource("StyleBoxEmpty_fjquj")
action_mode = 1
selected = 0
item_count = 2
popup/item_0/text = "false"
popup/item_0/id = 0
popup/item_1/text = "true"
popup/item_1/id = 1

[node name="DragDropArea" parent="InputSwitcher/BoolInput/BoolInputOption" instance=ExtResource("2_05gck")]
layout_mode = 1
drag_outside = true

[node name="SnapPoint" parent="." instance=ExtResource("2_6esp3")]
unique_name_in_owner = true
layout_mode = 2
block_type = 3
variant_type = 4

[connection signal="focus_exited" from="InputSwitcher/TextInput/LineEdit" to="." method="_on_line_edit_focus_exited"]
[connection signal="text_submitted" from="InputSwitcher/TextInput/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="drag_started" from="InputSwitcher/TextInput/LineEdit/DragDropArea" to="." method="_on_drag_drop_area_drag_started"]
[connection signal="color_changed" from="InputSwitcher/ColorInput" to="." method="_on_color_input_color_changed"]
[connection signal="drag_started" from="InputSwitcher/ColorInput/DragDropArea" to="." method="_on_drag_drop_area_drag_started"]
[connection signal="item_selected" from="InputSwitcher/OptionInput" to="." method="_on_option_input_item_selected"]
[connection signal="drag_started" from="InputSwitcher/OptionInput/DragDropArea" to="." method="_on_drag_drop_area_drag_started"]
[connection signal="focus_exited" from="InputSwitcher/Vector2Input/HBoxContainer/XLineEdit" to="." method="_on_x_line_edit_focus_exited"]
[connection signal="text_submitted" from="InputSwitcher/Vector2Input/HBoxContainer/XLineEdit" to="." method="_on_x_line_edit_text_submitted"]
[connection signal="drag_started" from="InputSwitcher/Vector2Input/HBoxContainer/XLineEdit/DragDropArea" to="." method="_on_drag_drop_area_drag_started"]
[connection signal="drag_started" from="InputSwitcher/Vector2Input/HBoxContainer/CenterContainer/ColorRect/DragDropArea" to="." method="_on_drag_drop_area_drag_started"]
[connection signal="focus_exited" from="InputSwitcher/Vector2Input/HBoxContainer/YLineEdit" to="." method="_on_y_line_edit_focus_exited"]
[connection signal="text_submitted" from="InputSwitcher/Vector2Input/HBoxContainer/YLineEdit" to="." method="_on_y_line_edit_text_submitted"]
[connection signal="drag_started" from="InputSwitcher/Vector2Input/HBoxContainer/YLineEdit/DragDropArea" to="." method="_on_drag_drop_area_drag_started"]
[connection signal="item_selected" from="InputSwitcher/BoolInput/BoolInputOption" to="." method="_on_option_input_item_selected"]
[connection signal="drag_started" from="InputSwitcher/BoolInput/BoolInputOption/DragDropArea" to="." method="_on_drag_drop_area_drag_started"]
[connection signal="snapped_block_changed" from="SnapPoint" to="." method="_on_snap_point_snapped_block_changed"]
